# scirs

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  TODO.md  fix-doctests.md  rustfmt.toml  swt_coefficients_example.html  swt_denoising_example.html
.github/workflows/: ci.yml
scirs2/: Cargo.toml  README.md
scirs2-autograd/: Cargo.toml  README.md
scirs2-cluster/: Cargo.toml  README.md  TODO.md
scirs2-core/: Cargo.toml  README.md
scirs2-core/benches/: array_protocol_bench.rs
scirs2-core/examples/: advanced_prefetching_example.rs  array_protocol_advanced.rs  array_protocol_backpropagation.rs  array_protocol_distributed_training.rs  array_protocol_operations.rs  custom_array_protocol.rs  distributed_training_example.rs  memory_management.rs  memory_mapped_prefetching.rs  neural_network_example.rs  neural_network_training.rs
scirs2-core/src/: constants.rs  error.rs
scirs2-core/src/array_protocol/: auto_device.rs  distributed_impl.rs  distributed_training.rs  gpu_impl.rs  grad.rs  jit_impl.rs  mixed_precision.rs  ml_ops.rs  mod.rs  neural.rs  operations.rs  serialization.rs  training.rs
scirs2-core/src/memory/metrics/: snapshot.rs
scirs2-core/src/memory_efficient/: adaptive_prefetch.rs  cross_file_prefetch.rs  mod.rs  pattern_recognition.rs  prefetch.rs  resource_aware.rs
scirs2-core/tests/: array_protocol_box_clone_test.rs  array_protocol_tests.rs
scirs2-datasets/: Cargo.toml  README.md  TODO.md
scirs2-fft/: Cargo.toml  README.md
scirs2-fft/src/: fft.rs  helper.rs  hfft.rs  rfft.rs
scirs2-graph/: Cargo.toml  README.md
scirs2-integrate/: Cargo.toml  README.md  TODO.md
scirs2-integrate/examples/: bvp_example.rs  dop853_example.rs  lsoda_comparison.rs  lsoda_debug.rs  lsoda_example.rs  lsoda_method_switching.rs  lsoda_minimal.rs  lsoda_simple.rs  lsoda_visualization.rs  method_comparison.rs  ode_improved_bdf.rs  radau_example.rs
scirs2-integrate/src/: bvp.rs  ode.rs  utils.rs
scirs2-integrate/tests/: lsoda_tests.rs
scirs2-interpolate/: Cargo.toml  README.md  TODO.md
scirs2-io/: Cargo.toml  README.md  TODO.md
scirs2-linalg/: Cargo.toml  README.md
scirs2-linalg/src/: lib.rs
scirs2-metrics/: Cargo.toml  README.md  TODO.md
scirs2-ndimage/: Cargo.toml  README.md
scirs2-neural/: Cargo.toml  README.md  TODO.md
scirs2-neural/src/activations/: swish.rs
scirs2-neural/src/data/: dataloader.rs  utils.rs
scirs2-neural/src/models/architectures/: clip.rs  convnext.rs  fusion.rs  seq2seq.rs
scirs2-optim/: Cargo.toml  README.md  TODO.md
scirs2-optimize/: Cargo.toml  README.md  TODO.md
scirs2-optimize/src/: lib.rs  unconstrained.rs
scirs2-series/: Cargo.toml  README.md
scirs2-signal/: Cargo.toml  README.md  TODO.md
scirs2-signal/benches/: wavelet_bench.rs
scirs2-signal/examples/: complex_wavelets_example.rs  dmeyer_wavelet_example.rs  meyer_wavelet_example.rs  swt2d_edge_detection.rs  swt2d_example.rs  swt_example.rs  wavelet2d_example.rs  wavelet_image_processing.rs  wavelet_packet_2d.rs  wavelet_visualization.rs  wpt_example.rs
scirs2-signal/src/: czt.rs  denoise.rs  detrend.rs  dwt.rs  dwt2d.rs  dwt2d_image.rs  hilbert.rs  lib.rs  lti.rs  lti_response.rs  savgol.rs  spectral.rs  swt.rs  swt2d.rs  wavelet_vis.rs  wavelets.rs  wpt.rs  wpt2d.rs
scirs2-sparse/: Cargo.toml  README.md  TODO.md
scirs2-spatial/: Cargo.toml  README.md  TODO.md
scirs2-spatial/src/: balltree.rs  convex_hull.rs  delaunay.rs  polygon.rs  set_distance.rs  voronoi.rs
scirs2-special/: Cargo.toml  README.md
scirs2-stats/: Cargo.toml  README.md  TODO.md
scirs2-text/: Cargo.toml  README.md  TODO.md
scirs2-transform/: Cargo.toml  README.md
scirs2-transform/src/: error.rs  lib.rs
scirs2-vision/: Cargo.toml  README.md
scirs2/src/: lib.rs
