[package]
name = "scirs2-cluster"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clustering algorithms module for SciRS2"
keywords = ["clustering", "scientific", "scipy", "numerical", "kmeans"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
scirs2-spatial.workspace = true
scirs2-linalg.workspace = true
scirs2-stats.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
ndarray-linalg = { workspace = true, features = ["openblas-static"] }
num-traits.workspace = true
thiserror.workspace = true
rand.workspace = true
approx.workspace = true
