[package]
name = "scirs2-datasets"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Datasets module for SciRS2"
keywords = ["datasets", "machine-learning", "data", "scientific", "scipy"]
categories = ["science", "data-structures", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true, features = ["serde"] }
scirs2-core = { workspace = true, features = ["cache"] }
rand.workspace = true
rand_distr.workspace = true
thiserror.workspace = true

# Data handling
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
csv.workspace = true

# Datasets specific dependencies
reqwest = { workspace = true, features = ["blocking", "json"], optional = true }
dirs.workspace = true
flate2.workspace = true
zip.workspace = true
blake3.workspace = true
lazy_static.workspace = true
ureq.workspace = true
tempfile.workspace = true

[features]
default = []
download = ["reqwest"]
