[package]
name = "scirs2-fft"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast Fourier Transform module for SciRS2"
keywords = ["fft", "fourier", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[features]
default = ["helper", "window", "parallel"]
helper = []
window = []
minimal = []
parallel = []

[dependencies]
# Core dependencies
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
scirs2-core = { workspace = true, features = ["simd", "parallel"] }
rayon.workspace = true
rustfft.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
