[package]
name = "scirs2-graph"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph processing module for SciRS2"
keywords = ["graph", "network", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
scirs2-sparse.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
openblas-src.workspace = true
blas.workspace = true
petgraph.workspace = true
rand.workspace = true

[features]
default = []
