[package]
name = "scirs2-integrate"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Numerical integration module for SciRS2"
keywords = ["integration", "quadrature", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.2" }
# Temporarily removed for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_core = "0.9.3"
libc = "0.2"
libm = "0.2"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "integrator_bench"
harness = false

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
