[package]
name = "scirs2-integrate"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Numerical integration module for SciRS2"
keywords = ["integration", "quadrature", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
# Temporarily removed for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_core.workspace = true
libc.workspace = true
libm.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[[bench]]
name = "integrator_bench"
harness = false

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]
