[package]
name = "scirs2-interpolate"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Interpolation module for SciRS2"
keywords = ["interpolation", "spline", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
scirs2-linalg.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[features]
default = []
