[package]
name = "scirs2-linalg"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Linear algebra module for SciRS2"
keywords = ["linear-algebra", "matrix", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["linalg", "openblas", "parallel", "simd", "random"] }
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_chacha.workspace = true
ndarray-rand.workspace = true
approx.workspace = true
wide.workspace = true
rayon.workspace = true
scirs2-autograd = { workspace = true, optional = true }
openblas-src.workspace = true
blas.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true

[features]
default = ["openblas", "simd"]
netlib = ["scirs2-core/netlib"]
openblas = ["scirs2-core/openblas"]
intel-mkl = ["scirs2-core/intel-mkl"]
tensor_contraction = []               # Optional tensor contraction functionality
simd = ["scirs2-core/simd"]           # SIMD-accelerated operations
autograd = ["dep:scirs2-autograd"]    # Automatic differentiation support
parallel = ["scirs2-core/parallel"]   # Parallel processing support
extended-test = []                    # For extended precision tests

[[bench]]
name = "linalg_bench"
harness = false
path = "benches/linalg_bench.rs"

[[bench]]
name = "simd_bench"
harness = false
path = "benches/simd_bench.rs"
