[package]
name = "scirs2-metrics"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Machine Learning evaluation metrics module for SciRS2"
keywords = ["metrics", "evaluation", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
# Temporarily removed for publishing
# # # scirs2-stats = { path = "../scirs2-stats", version = "0.1.0-alpha.2" }
# # # scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
approx.workspace = true
rand.workspace = true

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]
