[package]
name = "scirs2-ndimage"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "N-dimensional image processing module for SciRS2"
keywords = ["image", "processing", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation", "parallel"] }
scirs2-interpolate.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
thiserror.workspace = true
ndarray-rand.workspace = true
approx.workspace = true
cached.workspace = true

[dev-dependencies]
criterion.workspace = true

# Temporarily commented out for publishing
# [[bench]]
# name = "rank_filter_bench"
# path = "../benches/ndimage/rank_filter_bench.rs"
# harness = false
