[package]
name = "scirs2-neural"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Neural network building blocks module for SciRS2"
keywords = [
  "neural-network",
  "deep-learning",
  "scientific",
  "ai",
  "machine-learning",
]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["linalg", "openblas"], optional = true }
# Temporarily commented out for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2", optional = true }
# scirs2-optimize = { path = "../scirs2-optimize", version = "0.1.0-alpha.2", optional = true }
# scirs2-optim = { path = "../scirs2-optim", version = "0.1.0-alpha.2", optional = true }
ndarray = { workspace = true, features = ["serde", "rayon"] }
ndarray-stats.workspace = true
ndarray-linalg = { workspace = true, features = ["openblas-static"] }
num-integer.workspace = true
approx.workspace = true
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
blas.workspace = true
openblas-src.workspace = true
autograd.workspace = true
# Temporarily commented out for publishing
# scirs2-autograd = { path = "../scirs2-autograd", version = "0.1.0-alpha.2" }

# Note: clip_example.rs and feature_fusion_example.rs were removed due to BLAS linking issues

# Serialization dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
serde_cbor.workspace = true
rmp-serde.workspace = true

# Future dependency for PandRS and NumRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }
# numrs_wrapper = { path = "../wrappers/numrs_wrapper", optional = true }

[features]
default = ["openblas"]
full = ["core", "openblas"] # Temporarily limited for publishing
core = ["dep:scirs2-core"]
# Features temporarily disabled for publishing
# linalg = ["dep:scirs2-linalg"] 
# optimize = ["dep:scirs2-optimize"]
optim = []                                    # Empty feature for compatibility with existing code
openblas = ["ndarray-linalg/openblas-static"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]

[[example]]
name = "autograd_example"
path = "examples/autograd_example.rs"

[[example]]
name = "transformer_example"
path = "examples/transformer_example.rs"

[[example]]
name = "batchnorm_example"
path = "examples/batchnorm_example.rs"

[[example]]
name = "dropout_example"
path = "examples/dropout_example.rs"

[[example]]
name = "activations_example"
path = "examples/activations_example.rs"

[[example]]
name = "model_serialization_example"
path = "examples/model_serialization_example.rs"

[[example]]
name = "advanced_optimizers_example"
path = "examples/advanced_optimizers_example.rs"
