[package]
name = "scirs2-optim"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Machine Learning optimization module for SciRS2"
keywords = ["optimization", "machine-learning", "scientific", "sgd", "adam"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.2" }
scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
scirs2-optimize = { path = "../scirs2-optimize", version = "0.1.0-alpha.2" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
ndarray-rand = { workspace = true }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
rand = "0.9.0"

[dev-dependencies]
plotters = "0.3.5"
