[package]
name = "scirs2-optim"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Machine Learning optimization module for SciRS2"
keywords = ["optimization", "machine-learning", "scientific", "sgd", "adam"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
scirs2-linalg.workspace = true
scirs2-optimize.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
ndarray-rand = { workspace = true }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
plotters.workspace = true
