[package]
name = "scirs2-optimize"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization module for SciRS2"
keywords = ["optimization", "minimize", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.2" }
scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
openblas-src = "0.10.11"

# Optimization specific dependencies
argmin = "0.10.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
