[package]
name = "scirs2-signal"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Signal processing module for SciRS2"
keywords = ["signal-processing", "filter", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
openblas-src.workspace = true
rustfft.workspace = true
scirs2-fft.workspace = true
scirs2-linalg.workspace = true
rand.workspace = true
plotly.workspace = true
# Optional rayon dependency for parallel processing
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
