[package]
name = "scirs2-sparse"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sparse matrix module for SciRS2"
keywords = ["sparse-matrix", "csr", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.2" }
# Removed scirs2-linalg to avoid circular dependency
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"

# Sparse matrix specific dependencies
sprs = "0.11.3"
rand = "0.9.0"

# For IO operations
byteorder = "1.5.0"


[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
tempfile = "3.10.1"
