[package]
name = "scirs2-sparse"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sparse matrix module for SciRS2"
keywords = ["sparse-matrix", "csr", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
# Removed scirs2-linalg to avoid circular dependency
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
sprs.workspace = true
rand.workspace = true
byteorder.workspace = true


[dev-dependencies]
approx.workspace = true
criterion.workspace = true
tempfile.workspace = true
