[package]
name = "scirs2-spatial"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial algorithms module for SciRS2"
keywords = ["spatial", "distance", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
rayon = "1.9.0"

# Computational geometry
qhull = "0.4.0"
rand = "0.9.0"

[features]
default = []
parallel = []

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
rand_chacha = "0.9.0"
