[package]
name = "scirs2-spatial"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial algorithms module for SciRS2"
keywords = ["spatial", "distance", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rayon.workspace = true
qhull.workspace = true
rand.workspace = true

[features]
default = []
parallel = []

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
rand_chacha.workspace = true
