[package]
name = "scirs2-stats"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Statistical functions module for SciRS2"
keywords = ["statistics", "probability", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
ndarray-linalg = { workspace = true, features = ["openblas-static"] }
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd", "linalg", "openblas"] }
scirs2-linalg.workspace = true
openblas-src.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_pcg.workspace = true
statrs.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
