[package]
name = "scirs2-text"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Text processing module for SciRS2"
keywords = ["text", "nlp", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel"] }
# Temporarily removed for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.2" }
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true
approx.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
unicode-segmentation.workspace = true
lazy_static.workspace = true
tempfile.workspace = true

# Feature-gated dependencies
tokenizers = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde-support = ["dep:serde", "dep:serde_json"]
tokenization = ["dep:tokenizers"]
