[package]
name = "scirs2-vision"
version = "0.1.0-alpha.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Computer vision module for SciRS2"
keywords = [
  "vision",
  "image-processing",
  "scientific",
  "ai",
  "machine-learning",
]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
scirs2-core.workspace = true
# Temporarily commented out for publishing
# scirs2-ndimage = { path = "../scirs2-ndimage", version = "0.1.0-alpha.2" }
ndarray = { workspace = true, features = ["serde", "rayon"] }
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
rand.workspace = true

# Vision specific dependencies
image = { workspace = true, features = ["jpeg", "png", "gif"] }

[features]
default = []

[[example]]
name = "feature_detection"
path = "examples/feature_detection.rs"

[[example]]
name = "color_transformations"
path = "examples/color_transformations.rs"

[[example]]
name = "image_segmentation"
path = "examples/image_segmentation.rs"

[[example]]
name = "morphological_operations"
path = "examples/morphological_operations.rs"
